--- a/README.rdoc
+++ b/README.rdoc
@@ -1,11 +1,10 @@
-== README
+== Task Manager (Undev practice)
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+* Ruby version: 2.0.0
 
-Things you may want to cover:
-
-* Ruby version
+* Vagrant development envirenment
+   https://github.com/Slike9/practice_task_manager_vagrant
+   Place this in the same folder where the prohttps://github.com/Slike9/practice_task_manager_vagrant
 
 * System dependencies
 
@@ -17,12 +16,6 @@ Things you may want to cover:
 
 * How to run the test suite
 
-* Services (job queues, cache servers, search engines, etc.)
+* Services (job queues, cache servers, search engines, etc.)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222222
 
 * Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
