pagination; view changes

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -28,7 +28,7 @@ en:
     story_filter:
       title: Filter
     stories:
-      title:  Listing stories
+      title:  Stories
     new_story:
       title: New story
     edit_story:
