Comments editing in story form

--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -36,6 +36,8 @@ en:
         title: Editing story
       show:
         comments_title: Comments
+      form:
+        comments_title: Comments
     comments:
       comment:
         comment: Comment
